[gd_scene load_steps=9 format=3 uid="uid://c6a3v422mwhg4"]

[ext_resource type="Script" path="res://mobs/stone.gd" id="1_3adfh"]
[ext_resource type="Texture2D" uid="uid://bfd3e6enwpako" path="res://rock_sheet.png" id="1_7ljyy"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cvcuw"]
atlas = ExtResource("1_7ljyy")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4bb5"]
atlas = ExtResource("1_7ljyy")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpd0e"]
atlas = ExtResource("1_7ljyy")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a24rr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cvcuw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4bb5")
}],
"loop": false,
"name": &"burst",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpd0e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l70yg"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_pt1gm"]
radius = 13.0384

[node name="Stone" type="RigidBody2D"]
gravity_scale = 0.0
lock_rotation = true
script = ExtResource("1_3adfh")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Sprite2D"]
sprite_frames = SubResource("SpriteFrames_a24rr")
animation = &"burst"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l70yg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_pt1gm")

[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="animation_finished" from="Sprite2D/AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
